Adds modal styles, normalizes body padding, increases p height for testing purposes.

--- a/main.css
+++ b/main.css
@@ -2,4 +2,13 @@ body {
   background-color: lavender;
   color: salmon;
   min-height: 4000px;
+  padding: 0;
+}
+
+p {
+  height: 10vh;
+}
+
+#ouibounce-modal {
+  display: none;
 }
