Update test files
- Change CSS color for background and body
- Remove sensitivity

--- a/test/main.css
+++ b/test/main.css
@@ -1,6 +1,6 @@
 body {
-  background-color: lavender;
-  color: salmon;
+  background-color: #2E4052;
+  color: #F0F1F2;
   min-height: 500px;
   padding: 0;
 }
