--- a/test/ouibounce.css
+++ b/test/ouibounce.css
@@ -1,69 +1,129 @@
 #ouibounce-modal {
-    display: none;
+  display: none;
 }
-
 #ouibounce-modal .underlay {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba(0,0,0, 0.5);
-    cursor: pointer;
-    -webkit-animation: fadein .5s;
-    animation: fadein .5s;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0,0,0,0.5);
+  cursor: pointer;
+  -webkit-animation: fadein 0.5s;
+  animation: fadein 0.5s;
 }
-
 #ouibounce-modal .modal {
-    width: 600px;
-    height: 400px;
-    background-color: #F0F1F2;
-    z-index: 1;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-
-    border-radius: 4px;
-    -webkit-animation: popin .3s;
-    animation: popin .3s;
+  width: 600px;
+  height: 400px;
+  background-color: #f0f1f2;
+  z-index: 1;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  border-radius: 4px;
+  -webkit-animation: popin 0.3s;
+  animation: popin 0.3s;
 }
-
 #ouibounce-modal h3 {
-    font-size: 18px;
-    background-color: #444;
-    color: white;
-    padding: 10px;
-    margin: 0;
-    border-radius: 4px 4px 0 0;
-    text-align: center;
+  font-size: 18px;
+  background-color: #444;
+  color: #fff;
+  padding: 10px;
+  margin: 0;
+  border-radius: 4px 4px 0 0;
+  text-align: center;
 }
-
 #ouibounce-modal p {
-    padding: 10px;
-    color: #344A5F;
+  padding: 10px;
+  color: #344a5f;
 }
-
 @-webkit-keyframes fadein {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
-}
+  0% {
+    opacity: 0;
+  }
 
+  100% {
+    opacity: 1;
+  }
+}
+@-ms-keyframes fadein {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
 @keyframes fadein {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
-}
+  0% {
+    opacity: 0;
+  }
 
+  100% {
+    opacity: 1;
+  }
+}
 @-webkit-keyframes popin {
-    0% { -webkit-transform: scale(0); transform: scale(0); opacity: 0; }
-    85% { -webkit-transform: scale(1.05); transform: scale(1.05); opacity: 1; }
-    100% { -webkit-transform: scale(1); transform: scale(1); opacity: 1; }
-}
+  0% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    opacity: 0;
+  }
 
+  85% {
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
+    opacity: 1;
+  }
+
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+@-ms-keyframes popin {
+  0% {
+    -ms-transform: scale(0);
+    transform: scale(0);
+    opacity: 0;
+  }
+
+  85% {
+    -ms-transform: scale(1.05);
+    transform: scale(1.05);
+    opacity: 1;
+  }
+
+  100% {
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+}
 @keyframes popin {
-    0% { -webkit-transform: scale(0); -ms-transform: scale(0); transform: scale(0); opacity: 0; }
-    85% { -webkit-transform: scale(1.05); -ms-transform: scale(1.05); transform: scale(1.05); opacity: 1; }
-    100% { -webkit-transform: scale(1); -ms-transform: scale(1); transform: scale(1); opacity: 1; }
+  0% {
+    -webkit-transform: scale(0);
+    -ms-transform: scale(0);
+    transform: scale(0);
+    opacity: 0;
+  }
+
+  85% {
+    -webkit-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    transform: scale(1.05);
+    opacity: 1;
+  }
+
+  100% {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
 }
