--- a/test/ouibounce.styl
+++ b/test/ouibounce.styl
@@ -14,7 +14,7 @@
     .modal
         width: 600px
         height: 400px
-        background-color: #F0F1F2
+        background-color: #252525
         z-index: 1
         position: absolute
         margin: auto
