--- a/test/ouibounce.css
+++ b/test/ouibounce.css
@@ -15,7 +15,7 @@
 #ouibounce-modal .modal {
   width: 600px;
   height: 400px;
-  background-color: #f0f1f2;
+  background-color: #252525;
   z-index: 1;
   position: absolute;
   margin: auto;
