--- a/test/ouibounce.styl
+++ b/test/ouibounce.styl
@@ -1,4 +1,6 @@
 #ouibounce-modal
+    // Import the font from http://www.google.com/fonts#UsePlace:use/Collection:Open+Sans
+    font-family: 'Open Sans', sans-serif
     display: none
 
     .underlay
@@ -11,10 +13,10 @@
         cursor: pointer
         animation: fadein .5s
 
-    .modal
+    .modal        
         width: 600px
         height: 400px
-        background-color: #252525
+        background-color: #F0F1F2
         z-index: 1
         position: absolute
         margin: auto
@@ -26,18 +28,72 @@
         border-radius: 4px
         animation: popin .3s
 
-    h3
+    .modal-title
         font-size: 18px
-        background-color: #444
+        background-color: #252525
         color: white
         padding: 10px
         margin: 0
         border-radius: 4px 4px 0 0
         text-align: center
 
+    h3
+        font-size: 1em
+        margin: 0.2em
+        text-transform: uppercase
+
+    .modal-body
+        padding: 20px 35px
+        font-size: 0.9em
+
     p
-        padding: 10px
         color: #344A5F
+
+    form
+        text-align: center
+        margin-top: 35px
+
+        input[type=text]
+            padding: 12px
+            font-size: 1.2em
+            width: 300px
+            border-radius: 4px
+            border: 1px solid #CCC
+            -webkit-font-smoothing: antialiased
+
+        input[type=submit]
+            text-transform: uppercase
+            font-weight: bold
+            padding: 12px
+            font-size: 1.1em
+            border-radius: 4px
+            color: white
+            background-color: #4AB471
+            border: none
+            cursor: pointer
+            -webkit-font-smoothing: antialiased
+
+        // display fake form message
+        p
+            text-align: left
+            margin-left: 30px
+            opacity: 0.6
+            margin-top: 1px
+            padding-top: 1px
+            font-size: 0.8em
+
+    .modal-footer
+        position: absolute
+        bottom: 20px
+        text-align: center
+        width: 100%
+
+        p
+            text-transform: capitalize
+            cursor: pointer
+            display: inline
+            border-bottom: 1px solid #344A5F
+            
 
 @keyframes fadein
     0% 
@@ -56,3 +112,4 @@
     100% 
         transform: scale(1)
         opacity: 1
+
