--- a/test/ouibounce.css
+++ b/test/ouibounce.css
@@ -1,6 +1,11 @@
 #ouibounce-modal {
   font-family: 'Open Sans', sans-serif;
   display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 #ouibounce-modal .underlay {
   width: 100%;
@@ -38,9 +43,11 @@
   text-align: center;
 }
 #ouibounce-modal h3 {
+  color: #fff;
   font-size: 1em;
   margin: 0.2em;
   text-transform: uppercase;
+  font-weight: 500;
 }
 #ouibounce-modal .modal-body {
   padding: 20px 35px;
@@ -75,11 +82,11 @@
 }
 #ouibounce-modal form p {
   text-align: left;
-  margin-left: 30px;
-  opacity: 0.6;
+  margin-left: 35px;
+  opacity: 0.8;
   margin-top: 1px;
   padding-top: 1px;
-  font-size: 0.8em;
+  font-size: 0.9em;
 }
 #ouibounce-modal .modal-footer {
   position: absolute;
