--- a/test/ouibounce.styl
+++ b/test/ouibounce.styl
@@ -3,6 +3,12 @@
     font-family: 'Open Sans', sans-serif
     display: none
 
+    position: fixed
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+
     .underlay
         width: 100%
         height: 100%
@@ -38,9 +44,11 @@
         text-align: center
 
     h3
+        color: white
         font-size: 1em
         margin: 0.2em
         text-transform: uppercase
+        font-weight: 500
 
     .modal-body
         padding: 20px 35px
@@ -76,11 +84,11 @@
         // display fake form message
         p
             text-align: left
-            margin-left: 30px
-            opacity: 0.6
+            margin-left: 35px
+            opacity: 0.8
             margin-top: 1px
             padding-top: 1px
-            font-size: 0.8em
+            font-size: 0.9em
 
     .modal-footer
         position: absolute
